Fixed bug where on mobile timer displays weren't swapping correctly

--- a/public/code/master.css
+++ b/public/code/master.css
@@ -751,7 +751,6 @@ li svg {
 
   .timerInput, .timerDisplay, .stopwatchDisplay {
     width: 100%;
-    display: block;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -881,7 +880,6 @@ li svg {
 
   .timerInput, .timerDisplay, .stopwatchDisplay {
     width: 100%;
-    display: block;
     justify-content: center;
     align-items: center;
     text-align: center;
